# lunagrandjeanMLOps

lunagrandjeanMLOps/: Dockerfile  Makefile  TODO  app.py  deployment.yaml  pyproject.toml  requirements.txt  service.yaml
